UUpdated TODO.md to reflect the current project status as "Core Pipeline Operational" and detailed progress on various agents and tasks.

--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,12 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
 # Anthropic API (Claude)
 # Get from: https://console.anthropic.com/settings/keys
-ANTHROPIC_API_KEY=sk-ant-your-key-here
+ANTHROPIC_API_KEY=sk-ant-your-key-heresk-proj-GSIUFL2WhJu3pEuFojvgnisj-liq-dSoXjXpkJ0CgdhG-2IOcTSXRsn4MPiY6EZxMB
 
-# Optional: OpenAI API (if using for embeddings instead of Anthropic)
-# OPENAI_API_KEY=sk-your-key-here
+# OpenAI API (Required for embeddings)
+# Get from: https://platform.openai.com/api-keys
+# Model: text-embedding-3-small (1536 dimensions)
+OPENAI_API_KEY=
 
 # Optional: Firecrawl (for v2 - blocked source access)
 # Get from: https://firecrawl.dev
