--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Core dependencies
 python-dotenv==1.0.0
 supabase==2.3.4
+gotrue>=1.3,<2.9  # Pin to avoid proxy parameter conflict with httpx 0.25.2
 
 # Anthropic API
 anthropic==0.39.0
@@ -14,10 +15,10 @@ lxml==5.1.0
 
 # HTTP requests
 requests==2.31.0
-httpx==0.27.0
+httpx<0.26,>=0.24
 
-# Vector embeddings (if not using Anthropic's embeddings)
-# openai==1.12.0
+# Vector embeddings (OpenAI for text-embedding-3-small)
+openai>=1.12.0
 
 # Data handling
 pydantic==2.6.1
