--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,10 @@ pydantic==2.6.1
 
 # Utilities
 python-dateutil==2.8.2
+
+# LinkedIn automation dependencies
+google-api-python-client==2.111.0
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
+flask==3.0.0
+tenacity==8.2.3
